<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtPantalla"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:background="@drawable/txtpantalla_border"
        android:padding="10dp"
        android:textAlignment="textEnd"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/txt_txtPantalla" />

    <TextView
        android:id="@+id/txtDetalle"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/txtdetalle_border"
        android:padding="5dp"
        android:paddingEnd="10dp"
        android:textAlignment="textEnd"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtPantalla"
        tools:text="@string/txt_txtDetalle" />

    <LinearLayout
        android:id="@+id/linLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtDetalle">

        <Button
            android:id="@+id/btn0"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginEnd="10dp"
            android:text="@string/txt_btn0"
            android:textSize="32sp" />

        <Button
            android:id="@+id/btn1"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginEnd="10dp"
            android:text="@string/txt_btn1"
            android:textSize="32sp" />

        <Button
            android:id="@+id/btn2"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginEnd="10dp"
            android:text="@string/txt_btn2"
            android:textSize="32sp" />

        <Button
            android:id="@+id/btn3"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="@string/txt_btn3"
            android:textSize="32sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linLayout1">

        <Button
            android:id="@+id/btn4"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginEnd="10dp"
            android:text="@string/txt_btn4"
            android:textSize="32sp" />

        <Button
            android:id="@+id/btn5"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginEnd="10dp"
            android:text="@string/txt_btn5"
            android:textSize="32sp" />

        <Button
            android:id="@+id/btn6"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginEnd="10dp"
            android:text="@string/txt_btn6"
            android:textSize="32sp" />

        <Button
            android:id="@+id/btn7"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="@string/txt_btn7"
            android:textSize="32sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linLayout2">

        <Button
            android:id="@+id/btn8"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginEnd="10dp"
            android:text="@string/txt_btn8"
            android:textSize="32sp" />

        <Button
            android:id="@+id/btn9"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginEnd="10dp"
            android:text="@string/txt_btn9"
            android:textSize="32sp" />

        <Button
            android:id="@+id/btnDec"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginEnd="10dp"
            android:text="@string/txt_btnDec"
            android:textSize="32sp" />

        <Button
            android:id="@+id/btnCE"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginEnd="10dp"
            android:text="@string/txt_btnCE"
            android:textSize="32sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linLayout4"
        android:layout_width="366dp"
        android:layout_height="180dp"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@id/linLayout3"
        app:layout_constraintTop_toBottomOf="@id/linLayout3">

        <LinearLayout
            android:id="@+id/linLayout4_col1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="@id/linLayout4"
            app:layout_constraintTop_toBottomOf="@id/linLayout3">

            <Button
                android:id="@+id/btnSuma"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginEnd="10dp"
                android:text="@string/txt_btnSuma"
                android:textSize="40dp" />

            <Button
                android:id="@+id/btnResta"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginEnd="10dp"
                android:text="@string/txt_btnResta"
                android:textSize="40dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linLayout4_col2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="@id/linLayout4_col1"
            app:layout_constraintTop_toBottomOf="@id/linLayout3">

            <Button
                android:id="@+id/btnMul"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginEnd="10dp"
                android:text="@string/txt_btnMul"
                android:textSize="40dp" />

            <Button
                android:id="@+id/btnDiv"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginEnd="10dp"
                android:text="@string/txt_btnDiv"
                android:textSize="40dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linLayout4_col3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="@id/linLayout4_col2"
            app:layout_constraintTop_toBottomOf="@id/linLayout3">

            <Button
                android:id="@+id/btnResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/txt_btnResult"
                android:textSize="40dp" />

            <Button
                android:id="@+id/btnBorrar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/menor"
                android:textSize="40dp" />


        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>